project-todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-todo-app
  namespace: project-todo-app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-todo-app
  template:
    metadata:
      labels:
        app: project-todo-app
    spec:
      volumes:
        - name: project-todo-app-storage
          persistentVolumeClaim:
            claimName: project-todo-app-storage
      containers:
        - name: project-todo-app-frontend
          image: hzville/devops-with-kubernetes:project-todo-app
          imagePullPolicy: Always
          volumeMounts:
          - name: project-todo-app-storage
            mountPath: /usr/src/app/files
        - name: project-todo-app-backend
          image: hzville/devops-with-kubernetes:project-todo-app-backend
          imagePullPolicy: Always
          volumeMounts:
          - name: project-todo-app-storage
            mountPath: /usr/src/app/files
