project-todo-app/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: project-todo-app
  namespace: project-todo-app-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-todo-app
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-usage-analysis
      - pause:
          duration: 30s
  template:
    metadata:
      labels:
        app: project-todo-app
    spec:
      volumes:
        - name: project-todo-app-storage
          persistentVolumeClaim:
            claimName: project-todo-app-storage
      containers:
        - name: project-todo-app-frontend
          image: hzville/devops-with-kubernetes:project-todo-app
          imagePullPolicy: Always
          volumeMounts:
          - name: project-todo-app-storage
            mountPath: /usr/src/app/files
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 10
        - name: project-todo-app-backend
          image: hzville/devops-with-kubernetes:project-todo-app-backend
          imagePullPolicy: Always
          volumeMounts:
          - name: project-todo-app-storage
            mountPath: /usr/src/app/files
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 10
