project-todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-todo-app-frontend-service
  namespace: project-todo-app-namespace
spec:
  type: ClusterIP
  selector:
    app: project-todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: project-todo-app-backend-service
  namespace: project-todo-app-namespace
spec:
  type: ClusterIP
  selector:
    app: project-todo-app
  ports:
    - port: 2222
      protocol: TCP
      targetPort: 3004

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: project-todo-app-namespace
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
