project-todo-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-todo-app-ingress
  namespace: project-todo-app-namespace
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-todo-app-frontend-service
            port:
              number: 2345
      - path: /api/todos
        pathType: Prefix
        backend:
          service:
            name: project-todo-app-backend-service
            port:
              number: 2222
